--- a/Web.config
+++ b/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Maio11_Best-20240511013055.mdf;Initial Catalog=aspnet-Maio11_Best-20240511013055;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="bdbestEntities" connectionString="metadata=res://*/Models.Stand.csdl|res://*/Models.Stand.ssdl|res://*/Models.Stand.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\bdbest.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ProjetoBDEntities" connectionString="metadata=res://*/Models.BdModel.csdl|res://*/Models.BdModel.ssdl|res://*/Models.BdModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\ProjetoBD.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
