--- a/Maio11_Best.csproj
+++ b/Maio11_Best.csproj
@@ -310,6 +310,7 @@
     <Content Include="Views\Carros\editarcarro.cshtml" />
     <Content Include="Views\Team\TeamList.cshtml" />
     <Content Include="Views\Player\PlayerList.cshtml" />
+    <Content Include="Views\Team\InsertTeam.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
