--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,9 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="EPPlus" version="7.1.3" targetFramework="net48" />
+  <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net48" />
+  <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net48" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net48" />
@@ -13,8 +16,19 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.0" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net48" />
@@ -25,10 +39,68 @@
   <package id="Microsoft.Owin.Security.OAuth" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Owin.Security.Twitter" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
+  <package id="NETStandard.Library" version="1.6.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net48" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net48" />
+  <package id="System.AppContext" version="4.1.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net48" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
+  <package id="System.Console" version="4.0.0" targetFramework="net48" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net48" />
+  <package id="System.Diagnostics.Tools" version="4.0.1" targetFramework="net48" />
+  <package id="System.Diagnostics.Tracing" version="4.1.0" targetFramework="net48" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net48" />
+  <package id="System.Globalization.Calendars" version="4.0.1" targetFramework="net48" />
+  <package id="System.IO" version="4.1.0" targetFramework="net48" />
+  <package id="System.IO.Compression" version="4.1.0" targetFramework="net48" />
+  <package id="System.IO.Compression.ZipFile" version="4.0.1" targetFramework="net48" />
+  <package id="System.IO.FileSystem" version="4.0.1" targetFramework="net48" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net48" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net48" />
+  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Net.Http" version="4.1.0" targetFramework="net48" />
+  <package id="System.Net.Primitives" version="4.0.11" targetFramework="net48" />
+  <package id="System.Net.Sockets" version="4.1.0" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.ObjectModel" version="4.0.12" targetFramework="net48" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net48" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net48" />
+  <package id="System.Reflection.Primitives" version="4.0.1" targetFramework="net48" />
+  <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net48" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net48" />
+  <package id="System.Runtime.Handles" version="4.0.1" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net48" />
+  <package id="System.Runtime.Numerics" version="4.0.1" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Pkcs" version="8.0.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net48" />
+  <package id="System.Text.Encoding" version="4.0.11" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="8.0.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="8.0.0" targetFramework="net48" />
+  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="net48" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net48" />
+  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.Threading.Thread" version="4.0.0" targetFramework="net48" />
+  <package id="System.Threading.Timer" version="4.0.1" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net48" />
+  <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
