Player data table

--- a/Maio11_Best.csproj
+++ b/Maio11_Best.csproj
@@ -408,6 +408,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\MyPlayer.cs" />
+    <Compile Include="Models\MyTeam.cs" />
+    <Compile Include="Models\MyTrainer.cs" />
     <Compile Include="Models\player.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
